--- a/MapsterCard/appsettings.json
+++ b/MapsterCard/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MapsterDbConnection": "Host=localhost;Database=MapsterDb;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
