Implement presenter layer

--- a/Kisa.WebApi/appsettings.json
+++ b/Kisa.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "KisaDb": "Host=localhost;Database=KisaDb;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
