--- a/Shklift/Shklift.Application/Shklift.Application.csproj
+++ b/Shklift/Shklift.Application/Shklift.Application.csproj
@@ -7,4 +7,10 @@
         <RootNamespace>ShkliftApplication</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Common" />
+      <Folder Include="Features" />
+      <Folder Include="Repositories" />
+    </ItemGroup>
+
 </Project>
