--- a/Shklift/Shklift.Application/Shklift.Application.csproj
+++ b/Shklift/Shklift.Application/Shklift.Application.csproj
@@ -8,9 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Common" />
-      <Folder Include="Features" />
-      <Folder Include="Repositories" />
+      <PackageReference Include="Mapster" Version="7.4.0-pre06" />
+      <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1-pre02" />
+      <PackageReference Include="MediatR" Version="12.0.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.2.23128.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shklift.Domain\Shklift.Domain.csproj" />
     </ItemGroup>
 
 </Project>
