--- a/Shklift/Shklift.Persistence/Shklift.Persistence.csproj
+++ b/Shklift/Shklift.Persistence/Shklift.Persistence.csproj
@@ -7,8 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Context" />
-      <Folder Include="Repositories" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.2.23128.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.0-preview.2.23128.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.2.23128.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.2.23128.3" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-preview.2.23128.3" />
+      <PackageReference Include="Npgsql" Version="8.0.0-preview.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shklift.Application\Shklift.Application.csproj" />
+      <ProjectReference Include="..\Shklift.Domain\Shklift.Domain.csproj" />
     </ItemGroup>
 
 </Project>
