--- a/Shklift/Shklift.WebApi/appsettings.json
+++ b/Shklift/Shklift.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ShkliftDb": "Host=localhost;Database=ShkliftDb;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
