Create base interface repository

--- a/ChumakBank.Application/ChumakBank.Application.csproj
+++ b/ChumakBank.Application/ChumakBank.Application.csproj
@@ -8,7 +8,6 @@
 
     <ItemGroup>
       <Folder Include="Features\" />
-      <Folder Include="Repositories\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -17,6 +16,10 @@
       <PackageReference Include="FluentValidation" Version="11.5.2" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
       <PackageReference Include="MediatR" Version="12.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ChumakBank.Domain\ChumakBank.Domain.csproj" />
     </ItemGroup>
 
 </Project>
