Configure web api

--- a/ChumakBank.WebApi/appsettings.json
+++ b/ChumakBank.WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "DbSetting": {
+    "Server" : "localhost",
+    "Database": "ChumakDb",
+    "UserId": "postgres",
+    "Password": "postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
