Extract code in extension

--- a/ChumakBank.WebApi/appsettings.json
+++ b/ChumakBank.WebApi/appsettings.json
@@ -5,6 +5,9 @@
     "UserId": "postgres",
     "Password": "postgres"
   },
+  "ConnectionStrings": {
+    "ChumakDb": "Host=localhost;Database=ChumakDb;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
