--- a/ChumakBank.Application/ChumakBank.Application.csproj
+++ b/ChumakBank.Application/ChumakBank.Application.csproj
@@ -18,4 +18,10 @@
       <ProjectReference Include="..\ChumakBank.Domain\ChumakBank.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.3\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
