Create base files for api layer

--- a/KozakBank.WebApi/appsettings.json
+++ b/KozakBank.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "KozakBank": "Host=localhost;Database=KozakBank;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
