--- a/KozakBank.WebApi/KozakBank.WebApi.csproj
+++ b/KozakBank.WebApi/KozakBank.WebApi.csproj
@@ -7,8 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\KozakBank.Application\KozakBank.Application.csproj" />
+      <ProjectReference Include="..\KozakBank.Persistence\KozakBank.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
